# python_django

./: .gitignore
M_19_prod/: .env  .env.template  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
M_19_prod/mysite/mysite/: settings.py
